--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/node": "18.11.15",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "gray-matter": "^4.0.3",
+    "markdown-to-jsx": "^7.1.8",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
